--- a/resources/.templates/head.html
+++ b/resources/.templates/head.html
@@ -11,7 +11,7 @@
 <meta name="msapplication-config" content="<%- url.root %>/img/favicon/browserconfig.xml">
 <meta name="theme-color" content="#ffffff">
 
-<!-- SEO -->
+<!-- SEO --><% _%>
 <% const pageDesc = 'Im Rahmen des Schulunterrichts, sind wir als Klasse im Skulpturengarten Darmstadt ' +
                     'gewesen und haben unsere entstandenen Texte hier in aufbereiteter Form veröffentlicht.'; -%>
 
