HTML and CSS cleanup

--- a/resources/.templates/head.html
+++ b/resources/.templates/head.html
@@ -32,5 +32,5 @@
 <meta name="twitter:creator" content="@SpraxDev">
 
 <!-- CSS -->
-<link href="<%- url.root %>/assets/bootstrap.min.css" rel="stylesheet">
-<link href="<%- url.root %>/assets/style.css" rel="stylesheet">
+<link rel="stylesheet" href="<%- url.root %>/assets/bootstrap.min.css">
+<link rel="stylesheet" href="<%- url.root %>/assets/style.css">
