--- a/resources/.templates/header.html
+++ b/resources/.templates/header.html
@@ -5,13 +5,13 @@
 
       <div>
         <a href="http://hems.de/" target="_blank" rel="noopener"><!--
-          --><img src="<%- url.root %>/img/hems.svg" width="60" height="60" class="d-inline-block align-top"
+          --><img src="<%- url.root %>/img/hems.svg" width="60" height="60" class="align-top d-inline-block"
                   alt="Webseite der Heinrich-Emanuel-Merck-Schule Darmstadt"><!--
         --></a>
 
         <a href="http://skulpturengarten-darmstadt.de/" target="_blank" rel="noopener"><!--
           --><img src="<%- url.root %>/img/Skulpturengarten.png" width="60" height="60"
-                  class="d-inline-block align-top" alt="Webseite des Skulpturengarten Darmstadt"><!--
+                  class="align-top d-inline-block" alt="Webseite des Skulpturengarten Darmstadt"><!--
         --></a>
       </div>
     </div>
