--- a/resources/.templates/media/buttons.html
+++ b/resources/.templates/media/buttons.html
@@ -1,2 +1,2 @@
 <button class="btn btn-info rounded-circle" onclick="onBtnClick(this)" data-target="card<%- index %>"
-        style="padding:revert;font-size:1.25rem;position:absolute;top:<%- info.offset.y %>;left:<%- info.offset.x %>">+</button>
+        style="top:<%- info.offset.y %>;left:<%- info.offset.x %>">+</button>
