--- a/resources/.templates/scripts.html
+++ b/resources/.templates/scripts.html
@@ -1,3 +1,3 @@
 <!-- Simple Analytics -->
-<script async defer src="https://simplea.sprax2013.de/latest.js"></script>
+<script src="https://simplea.sprax2013.de/latest.js" async defer></script>
 <noscript><img src="https://simplea.sprax2013.de/noscript.gif" alt=""></noscript>
