Update audio of `./media/18_atemzuege/` with a new video

--- a/resources/.templates/media/cards.html
+++ b/resources/.templates/media/cards.html
@@ -46,7 +46,7 @@
         <%_ -%>
         <%_ for (const key in m.contributors) { -%>
         <%_ const c = m.contributors[key]; -%>
-        <%= contributorTypeName[key] %> von <strong><%= c.name %></strong>
+        <%= contributorTypeName[key] %> von <strong><%= c.map(e=>e.name).join(', ') %></strong>
         <%_ -%>
         <%_ if(c.instagram) { -%>
         <a href="https://www.instagram.com/<%= encodeURIComponent(c.instagram) %>/" rel="noopener"
