Don't close cards when clicking on image
A fragment that has been forgotten in commit 7dc034d3e711ce1316a9c1df23fd0686a45dcb67

--- a/resources/index.html
+++ b/resources/index.html
@@ -24,7 +24,7 @@
               <source srcset="<%- url.root %>/img/bg.png 907w,<%- url.root %>/img/bg_hd.png 1920w"
                       sizes="(max-width: 2000px) 907px, 1920px" type="image/png">
 
-              <img src="<%- url.root %>/img/bg.png" class="img-fluid" onclick="onBtnClick(null)"
+              <img src="<%- url.root %>/img/bg.png" class="img-fluid"
                    alt="Zeichnung des Skulpturengartens, aus der Luft">
             </picture>
 
