Add meta tag for keywords

--- a/resources/.templates/head.html
+++ b/resources/.templates/head.html
@@ -15,6 +15,7 @@
 <% const pageDesc = 'Im Rahmen des Schulunterrichts, sind wir als Klasse im Skulpturengarten Darmstadt ' +
                     'gewesen und haben unsere entstandenen Texte hier in aufbereiteter Form veröffentlicht.'; -%>
 
+<meta name="keywords" content="Heinrich-Emanuel-Merck-Schule,Skulpturengarten Darmstadt,HEMS,Darmstadt,Geschichten">
 <meta name="description" content="<%= pageDesc %>">
 <meta name="author" content="Sprax (Christian Koop)">
 
