--- a/resources/index.html
+++ b/resources/index.html
@@ -52,10 +52,10 @@
       <h3>Wir im Skulpturengarten Darmstadt</h3>
 
       <p class="blockquote">
-        Im Rahmen der Kurse <em>Kreatives Schreiben</em> und <em>Darstellendes Spiel</em>
-        der Heinrich-Emanuel-Merck-Schule Darmstadt sind wir mit unseren Lehrerinnen
+        Im Rahmen der Kurse <em>Darstellendes Spiel</em> und <em>Kreatives Schreiben</em>
+        der Heinrich-Emanuel-Merck-Schule Darmstadt sind wir mit unseren Lehrerinnen (Frau Berner und Frau Trieschmann)
         einen Nachmittag im <em>Skulpturengarten Darmstadt</em> gewesen und
-        wurden dort von Frau Kuhlmann durch das Gelände geführt.
+        wurden dort von Frau Kuhlmann über das Gelände geführt.
       </p>
 
       <p class="blockquote">
