Add links to GitHub Discussions and Simple Analytics

--- a/resources/index.html
+++ b/resources/index.html
@@ -63,6 +63,21 @@
         entschlossen, diese aufzubereiten und für Interessierte auf dieser Webseite auszustellen.
       </p>
     </div>
+
+    <hr>
+
+    <div class="text-center">
+      <h3>
+        Fragen, Ideen, Anregungen, Feedback?
+        <img src="<%- url.root %>/img/feathericons/heart.svg" width="24" height="24" alt="" aria-hidden="true">
+      </h3>
+
+      <p class="blockquote">
+        Schreib' uns gerne auf
+        <a href="https://github.com/SpraxDev/HEMS-Skulpturengarten/discussions" target="_blank"
+           rel="noopener">GitHub Discussions</a> oder an die Mail im <a href="<%- url.root %>/legal">Impressum</a>.
+      </p>
+    </div>
   </div>
 </main>
 
