--- a/resources/.templates/footer.html
+++ b/resources/.templates/footer.html
@@ -7,8 +7,14 @@
     </small>
 
     <small class="text-muted float-end">
-      <a href="https://github.com/SpraxDev/HEMS-Skulpturengarten" class="link-dark" target="_blank"><img
-          src="<%- url.root %>/img/feathericons/github.svg" width="24" height="24" alt="GitHub repository"></a>
+      <a title="Webseitenstatistiken" href="https://simpleanalytics.com/hems.sprax2013.de" class="link-dark"
+         target="_blank"><img src="<%- url.root %>/img/feathericons/bar-chart.svg" width="24" height="24"
+                              alt="Webseitenstatistiken"></a>
+
+      <a title="Quellcode auf GitHub" href="https://github.com/SpraxDev/HEMS-Skulpturengarten" class="link-dark"
+         target="_blank"><img src="<%- url.root %>/img/feathericons/github.svg" width="24" height="24"
+                              alt="GitHub repository"></a>
+
       <a href="<%- url.root %>/LICENSE" class="link-dark">Copyright &copy; Some rights reserved.</a>
     </small>
   </div>
