--- a/resources/privacy.html
+++ b/resources/privacy.html
@@ -19,6 +19,8 @@
       <u>Datenschutzerklärung</u>
     </h2>
 
+    <p>&nbsp;</p>
+
     <p>
       Die Betreiber dieser Seiten nehmen den Schutz Ihrer persönlichen Daten sehr ernst.
       Wir behandeln Ihre personenbezogenen Daten vertraulich und entsprechend der gesetzlichen Datenschutzvorschriften
@@ -86,9 +88,8 @@
       Diese Seite nutzt aus Gründen der Sicherheit und zum Schutz der übertragung vertraulicher Inhalte, wie zum
       Beispiel der Anfragen, die Sie an uns als Seitenbetreiber senden, eine SSL-Verschlüsselung.
       Eine verschlüsselte Verbindung erkennen Sie daran, dass die Adresszeile des Browsers von "http://" auf
-      "https://" wechselt und an dem Schloss-Symbol in Ihrer Browserzeile.
+      "https://" wechselt und an dem Schloss-Symbol an Ihrer Adresszeile.
     </p>
-
     <p>
       Wenn die SSL Verschlüsselung aktiviert ist, können die Daten, die Sie an uns übermitteln,
       nicht von Dritten mitgelesen werden.
@@ -117,8 +118,50 @@
 
     <p>&nbsp;</p>
 
+    <h2>Content Delivery Network von Cloudflare</h2>
     <p>
-      Quelle: <a href="https://www.e-recht24.de" rel="noopener noreferrer">e-recht24.de</a>
+      Wir setzen ein sogenanntes „Content Delivery Network“ (CDN), angeboten von Cloudflare, Inc., 101 Townsend St, San
+      Francisco, CA 94107, USA, ein. Cloudflare ist unter dem Privacy-Shield-Abkommen zertifiziert und bietet hierdurch
+      eine Garantie, das europäische Datenschutzrecht einzuhalten
+      (<a href="https://www.privacyshield.gov/participant?id=a2zt0000000GnZKAA0&status=Active" target="_blank"
+          rel="noopener noreferrer">https://www.privacyshield.gov/participant?id=a2zt0000000GnZKAA0&status=Active</a>).
+    </p>
+    <p>
+      Ein CDN ist ein Dienst, mit dessen Hilfe Inhalte unseres Onlineangebotes, insbesondere große Mediendateien wie
+      Grafiken oder Skripte, mit Hilfe regional verteilter und über das Internet verbundener Server schneller
+      ausgeliefert werden. Die Verarbeitung der Daten der Nutzer erfolgt alleine zu den vorgenannten Zwecken und der
+      Aufrechterhaltung der Sicherheit und Funktionsfähigkeit des CDN.
+    </p>
+    <p>
+      Die Nutzung erfolgt auf Grundlage unserer berechtigten Interessen an einer sicheren und effizienten
+      Bereitstellung, Analyse sowie Optimierung unseres Onlineangebotes gem. Art. 6 Abs. 1 lit. f. DSGVO.
+    </p>
+    <p>
+      Weitere Informationen erhalten Sie in der Datenschutzerklärung von Cloudflare:
+      <a href="https://www.cloudflare.com/privacypolicy/" target="_blank" rel="noopener noreferrer">https://www.cloudflare.com/privacypolicy/</a>.
+    </p>
+
+    <p>&nbsp;</p>
+
+    <h2>Simple Analytics</h2>
+    <p>
+      Diese Website nutzt Funktionen des Webanalysedienstes Simple Analytics (Hooftlaan 4, 1401 ED Bussum, Niederlande).
+    </p>
+    <p>
+      Simple Analytics funktioniert ohne den Einsatz von Cookies und legt großen Wert auf Datenschutz.
+      <br>
+      Zusätzliche Informationen über die gesammelten Daten finden Sie unter
+      <a href="https://docs.simpleanalytics.com/what-we-collect" rel="noopener noreferrer">https://docs.simpleanalytics.com/what-we-collect</a>.
+    </p>
+    <p>
+      Mehr Informationen zum Umgang mit Nutzerdaten bei Simple Analytics finden Sie unter
+      <a href="https://simpleanalytics.com/privacy-policy" rel="noopener noreferrer">https://simpleanalytics.com/privacy-policy</a>.
+    </p>
+
+    <p>&nbsp;</p>
+
+    <p>
+      Teile dieser Datenschutzbestimmung stammen von <a href="https://www.e-recht24.de" rel="noopener noreferrer">e-recht24.de</a>
     </p>
   </div>
 </main>
