Updates author meta tag in HTML template to my full name

--- a/resources/.templates/head.html
+++ b/resources/.templates/head.html
@@ -17,7 +17,7 @@
 
 <meta name="keywords" content="Heinrich-Emanuel-Merck-Schule,Skulpturengarten Darmstadt,HEMS,Darmstadt,Geschichten">
 <meta name="description" content="<%= pageDesc %>">
-<meta name="author" content="Sprax (Christian Koop)">
+<meta name="author" content="Christian Koop (SpraxDev)">
 
 <meta property="og:type" content="website">
 <meta property="og:title" content="<%= pageTitle %>">
